RESOLVED FIXED 252732
WebContent crashes if GPUP WebGL remote context buffer cannot be allocated
https://bugs.webkit.org/show_bug.cgi?id=252732
Summary WebContent crashes if GPUP WebGL remote context buffer cannot be allocated
Kimmo Kinnunen
Reported 2023-02-22 00:41:28 PST
WebContent crashes if GPUP WebGL remote context buffer cannot be allocated
Attachments
Kimmo Kinnunen
Comment 1 2023-02-22 00:41:48 PST
Kimmo Kinnunen
Comment 2 2023-02-22 00:50:04 PST
EWS
Comment 3 2023-02-23 02:43:37 PST
Committed 260738@main (8e47c0fabb97): <https://commits.webkit.org/260738@main> Reviewed commits have been landed. Closing PR #10504 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.